--- a/dns/pkg/github.com/johnstarich/go/dns/init/index.html
+++ b/dns/pkg/github.com/johnstarich/go/dns/init/index.html
@@ -120,7 +120,7 @@
 			<p>
 			<span style="font-size:90%">
 			
-				<a href="/src/github.com/johnstarich/go/dns/init/init.go">init.go</a>
+				<a href="/go/dns/src/github.com/johnstarich/go/dns/init/init.go">init.go</a>
 			
 			</span>
 			</p>
@@ -135,7 +135,7 @@
 		
 			
 			
-			<h2 id="init">func <a href="/src/github.com/johnstarich/go/dns/init/init.go?s=67:78#L1">init</a>
+			<h2 id="init">func <a href="/go/dns/src/github.com/johnstarich/go/dns/init/init.go#L9">init</a>
 				<a class="permalink" href="#init">&#xb6;</a>
 				
 				
