--- a/gopages/index.html
+++ b/gopages/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <script>
-window.location = "pkg/"
+window.location = "pkg/github.com/johnstarich/go/gopages"
 </script>
 </head>
 <body>
-	<a href="pkg/">Click here to see this module's documentation.</a>
+	<a href="pkg/github.com/johnstarich/go/gopages">Click here to see this module's documentation.</a>
 </body>
 </html>
