--- a/regext/index.html
+++ b/regext/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 <script>
-window.location = "pkg/"
+window.location = "pkg/github.com/johnstarich/go/regext"
 </script>
 </head>
 <body>
-	<a href="pkg/">Click here to see this module's documentation.</a>
+	<a href="pkg/github.com/johnstarich/go/regext">Click here to see this module's documentation.</a>
 </body>
 </html>
