--- a/dns/src/github.com/johnstarich/go/dns/scutil/flag.go.html
+++ b/dns/src/github.com/johnstarich/go/dns/scutil/flag.go.html
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#375EAB">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#375EAB"/>
 
   <title>src/github.com/johnstarich/go/dns/scutil/flag.go - GoPages</title>
 
-<link type="text/css" rel="stylesheet" href="/go/dns/lib/godoc/style.css">
+<link type="text/css" rel="stylesheet" href="/go/dns/lib/godoc/style.css"/>
 
 <script>window.initFuncs = [];</script>
-<script src="/go/dns/lib/godoc/jquery.js" defer></script>
+<script src="/go/dns/lib/godoc/jquery.js" defer=""></script>
 
 
 
 <script>var goVersion = "go1.13.11";</script>
-<script src="/go/dns/lib/godoc/godocs.js" defer></script>
+<script src="/go/dns/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
 
-<div id='lowframe' style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
+<div id="lowframe" style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
 ...
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/dns/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/dns/pkg/">GoPages</a></div>
-<a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
+<div class="top-heading" id="heading-wide"><a href="/go/dns/pkg/github.com/johnstarich/go/dns/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/dns/pkg/github.com/johnstarich/go/dns/">GoPages</a></div>
+<a href="#" id="menu-button"><span id="menu-button-arrow">▽</span></a>
 
 </div></div>
 
@@ -38,7 +36,7 @@
 
   <h1>
     Source file
-    <a href="/src">src</a>/<a href="/src/github.com">github.com</a>/<a href="/src/github.com/johnstarich">johnstarich</a>/<a href="/src/github.com/johnstarich/go">go</a>/<a href="/src/github.com/johnstarich/go/dns">dns</a>/<a href="/src/github.com/johnstarich/go/dns/scutil">scutil</a>/<span class="text-muted">flag.go</span>
+    <a href="/go/dns/src">src</a>/<a href="/go/dns/src/github.com">github.com</a>/<a href="/go/dns/src/github.com/johnstarich">johnstarich</a>/<a href="/go/dns/src/github.com/johnstarich/go">go</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns">dns</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns/scutil">scutil</a>/<span class="text-muted">flag.go</span>
   </h1>
 
 
@@ -46,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/pkg/github.com/johnstarich/go/dns/scutil">github.com/johnstarich/go/dns/scutil</a>
+    Documentation: <a href="/go/dns/pkg/github.com/johnstarich/go/dns/scutil">github.com/johnstarich/go/dns/scutil</a>
   </h2>
 
 
@@ -54,25 +52,26 @@
 <div id="nav"></div>
 
 
-<script type='text/javascript'>document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1&nbsp;&nbsp;</span>package scutil
-<span id="L2" class="ln">     2&nbsp;&nbsp;</span>
-<span id="L3" class="ln">     3&nbsp;&nbsp;</span>type Flag string
-<span id="L4" class="ln">     4&nbsp;&nbsp;</span>
-<span id="L5" class="ln">     5&nbsp;&nbsp;</span>const (
-<span id="L6" class="ln">     6&nbsp;&nbsp;</span>	<span class="comment">// Scoped requires a resolver to only send queries on the specified interface</span>
-<span id="L7" class="ln">     7&nbsp;&nbsp;</span>	Scoped Flag = &#34;Scoped&#34;
-<span id="L8" class="ln">     8&nbsp;&nbsp;</span>
-<span id="L9" class="ln">     9&nbsp;&nbsp;</span>	RequestARecords Flag = &#34;Request A records&#34;
-<span id="L10" class="ln">    10&nbsp;&nbsp;</span>)
-<span id="L11" class="ln">    11&nbsp;&nbsp;</span>
-</pre><p><a href="/src/github.com/johnstarich/go/dns/scutil/flag.go?m=text">View as plain text</a></p>
+<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
+<pre><span id="L1" class="ln">     1  </span>package scutil
+<span id="L2" class="ln">     2  </span>
+<span id="L3" class="ln">     3  </span>type Flag string
+<span id="L4" class="ln">     4  </span>
+<span id="L5" class="ln">     5  </span>const (
+<span id="L6" class="ln">     6  </span>	<span class="comment">// Scoped requires a resolver to only send queries on the specified interface</span>
+<span id="L7" class="ln">     7  </span>	Scoped Flag = &#34;Scoped&#34;
+<span id="L8" class="ln">     8  </span>
+<span id="L9" class="ln">     9  </span>	RequestARecords Flag = &#34;Request A records&#34;
+<span id="L10" class="ln">    10  </span>)
+<span id="L11" class="ln">    11  </span>
+</pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br>
+Build version go1.13.11.<br/>
 </div>
 
 </div><!-- .container -->
 </div><!-- #page -->
-</body>
-</html>
+
+
+</body></html>
