--- a/dns/src/github.com/johnstarich/go/index.html
+++ b/dns/src/github.com/johnstarich/go/index.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <meta name="theme-color" content="#375EAB"/>
 
-  <title>src/github.com/johnstarich/go/dns/init/init.go - GoPages</title>
+  <title>src/github.com/johnstarich/go/ - GoPages</title>
 
 <link type="text/css" rel="stylesheet" href="/go/dns/lib/godoc/style.css"/>
 
@@ -35,8 +35,8 @@
 
 
   <h1>
-    Source file
-    <a href="/go/dns/src">src</a>/<a href="/go/dns/src/github.com">github.com</a>/<a href="/go/dns/src/github.com/johnstarich">johnstarich</a>/<a href="/go/dns/src/github.com/johnstarich/go">go</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns">dns</a>/<a href="/go/dns/src/github.com/johnstarich/go/dns/init">init</a>/<span class="text-muted">init.go</span>
+    Directory
+    <a href="/go/dns/src">src</a>/<a href="/go/dns/src/github.com">github.com</a>/<a href="/go/dns/src/github.com/johnstarich">johnstarich</a>/<span class="text-muted">go/</span>
   </h1>
 
 
@@ -44,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/go/dns/pkg/github.com/johnstarich/go/dns/init">github.com/johnstarich/go/dns/init</a>
+    Documentation: <a href="/go/dns/pkg/github.com/johnstarich/go">github.com/johnstarich/go</a>
   </h2>
 
 
@@ -52,20 +52,38 @@
 <div id="nav"></div>
 
 
-<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1  </span>package init
-<span id="L2" class="ln">     2  </span>
-<span id="L3" class="ln">     3  </span>import (
-<span id="L4" class="ln">     4  </span>	&#34;net&#34;
-<span id="L5" class="ln">     5  </span>
-<span id="L6" class="ln">     6  </span>	&#34;github.com/johnstarich/go/dns&#34;
-<span id="L7" class="ln">     7  </span>)
-<span id="L8" class="ln">     8  </span>
-<span id="L9" class="ln">     9  </span>func init() {
-<span id="L10" class="ln">    10  </span>	net.DefaultResolver = dns.New()
-<span id="L11" class="ln">    11  </span>}
-<span id="L12" class="ln">    12  </span>
-</pre><p></p>
+<!--
+	Copyright 2009 The Go Authors. All rights reserved.
+	Use of this source code is governed by a BSD-style
+	license that can be found in the LICENSE file.
+-->
+
+<p>
+</p><table class="layout">
+<tbody><tr>
+	<th align="left">File</th>
+	<td width="25"> </td>
+	<th align="right">Bytes</th>
+	<td width="25"> </td>
+	<th align="left">Modified</th>
+</tr>
+<tr>
+	<td><a href="..">..</a></td>
+</tr>
+
+<tr>
+	
+	<td align="left"><a href="dns/">dns/</a></td>
+	<td></td>
+	<td align="right">0</td>
+	<td></td>
+	<td align="left">2020-05-31 08:41:46.159907686 +0000 UTC</td>
+</tr>
+
+
+</tbody></table>
+<p></p>
+
 
 <div id="footer">
 Build version go1.13.11.<br/>
