--- a/gopages/404.html
+++ b/gopages/404.html
@@ -24,8 +24,8 @@
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/">GoPages</a></div>
+<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages</a></div>
 <a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
 
 </div></div>
