--- a/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc/main_test.go.html
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#375EAB">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#375EAB"/>
 
   <title>src/github.com/johnstarich/go/gopages/cmd/gendoc/main_test.go - GoPages</title>
 
-<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css">
+<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css"/>
 
 <script>window.initFuncs = [];</script>
-<script src="/go/gopages/lib/godoc/jquery.js" defer></script>
+<script src="/go/gopages/lib/godoc/jquery.js" defer=""></script>
 
 
 
 <script>var goVersion = "go1.13.11";</script>
-<script src="/go/gopages/lib/godoc/godocs.js" defer></script>
+<script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
 
-<div id='lowframe' style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
+<div id="lowframe" style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
 ...
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/">GoPages</a></div>
-<a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
+<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages</a></div>
+<a href="#" id="menu-button"><span id="menu-button-arrow">▽</span></a>
 
 </div></div>
 
@@ -38,7 +36,7 @@
 
   <h1>
     Source file
-    <a href="/src">src</a>/<a href="/src/github.com">github.com</a>/<a href="/src/github.com/johnstarich">johnstarich</a>/<a href="/src/github.com/johnstarich/go">go</a>/<a href="/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/src/github.com/johnstarich/go/gopages/cmd">cmd</a>/<a href="/src/github.com/johnstarich/go/gopages/cmd/gendoc">gendoc</a>/<span class="text-muted">main_test.go</span>
+    <a href="/go/gopages/src">src</a>/<a href="/go/gopages/src/github.com">github.com</a>/<a href="/go/gopages/src/github.com/johnstarich">johnstarich</a>/<a href="/go/gopages/src/github.com/johnstarich/go">go</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/cmd">cmd</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/cmd/gendoc">gendoc</a>/<span class="text-muted">main_test.go</span>
   </h1>
 
 
@@ -46,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/pkg/github.com/johnstarich/go/gopages/cmd/gendoc">github.com/johnstarich/go/gopages/cmd/gendoc</a>
+    Documentation: <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/cmd/gendoc">github.com/johnstarich/go/gopages/cmd/gendoc</a>
   </h2>
 
 
@@ -54,84 +52,85 @@
 <div id="nav"></div>
 
 
-<script type='text/javascript'>document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1&nbsp;&nbsp;</span>package main
-<span id="L2" class="ln">     2&nbsp;&nbsp;</span>
-<span id="L3" class="ln">     3&nbsp;&nbsp;</span>import (
-<span id="L4" class="ln">     4&nbsp;&nbsp;</span>	&#34;bytes&#34;
-<span id="L5" class="ln">     5&nbsp;&nbsp;</span>	&#34;io/ioutil&#34;
-<span id="L6" class="ln">     6&nbsp;&nbsp;</span>	&#34;os&#34;
-<span id="L7" class="ln">     7&nbsp;&nbsp;</span>	&#34;testing&#34;
-<span id="L8" class="ln">     8&nbsp;&nbsp;</span>
-<span id="L9" class="ln">     9&nbsp;&nbsp;</span>	&#34;github.com/johnstarich/go/gopages/cmd&#34;
-<span id="L10" class="ln">    10&nbsp;&nbsp;</span>	&#34;github.com/stretchr/testify/assert&#34;
-<span id="L11" class="ln">    11&nbsp;&nbsp;</span>	&#34;github.com/stretchr/testify/require&#34;
-<span id="L12" class="ln">    12&nbsp;&nbsp;</span>)
-<span id="L13" class="ln">    13&nbsp;&nbsp;</span>
-<span id="L14" class="ln">    14&nbsp;&nbsp;</span>func TestDocUpToDate(t *testing.T) {
-<span id="L15" class="ln">    15&nbsp;&nbsp;</span>	templateBytes, err := ioutil.ReadFile(&#34;doc.go&#34;)
-<span id="L16" class="ln">    16&nbsp;&nbsp;</span>	require.NoError(t, err)
-<span id="L17" class="ln">    17&nbsp;&nbsp;</span>	var newDoc bytes.Buffer
-<span id="L18" class="ln">    18&nbsp;&nbsp;</span>	err = genDoc(templateBytes, &amp;newDoc)
-<span id="L19" class="ln">    19&nbsp;&nbsp;</span>	require.NoError(t, err)
-<span id="L20" class="ln">    20&nbsp;&nbsp;</span>
-<span id="L21" class="ln">    21&nbsp;&nbsp;</span>	currentDoc, err := ioutil.ReadFile(&#34;../../doc.go&#34;)
-<span id="L22" class="ln">    22&nbsp;&nbsp;</span>	require.NoError(t, err)
-<span id="L23" class="ln">    23&nbsp;&nbsp;</span>	if !assert.Equal(t, newDoc.String(), string(currentDoc)) {
-<span id="L24" class="ln">    24&nbsp;&nbsp;</span>		t.Log(&#34;Usage docs are out of date: Run `go generate ./...` to regenerate them.&#34;)
-<span id="L25" class="ln">    25&nbsp;&nbsp;</span>	}
-<span id="L26" class="ln">    26&nbsp;&nbsp;</span>}
-<span id="L27" class="ln">    27&nbsp;&nbsp;</span>
-<span id="L28" class="ln">    28&nbsp;&nbsp;</span>func TestRun(t *testing.T) {
-<span id="L29" class="ln">    29&nbsp;&nbsp;</span>	t.Run(&#34;no args&#34;, func(t *testing.T) {
-<span id="L30" class="ln">    30&nbsp;&nbsp;</span>		assert.EqualError(t, run(&#34;&#34;, &#34;&#34;), &#34;Provide doc template and output file paths&#34;)
-<span id="L31" class="ln">    31&nbsp;&nbsp;</span>	})
-<span id="L32" class="ln">    32&nbsp;&nbsp;</span>
-<span id="L33" class="ln">    33&nbsp;&nbsp;</span>	t.Run(&#34;missing template file&#34;, func(t *testing.T) {
-<span id="L34" class="ln">    34&nbsp;&nbsp;</span>		assert.Error(t, run(&#34;/does/not/exist&#34;, &#34;unused&#34;))
-<span id="L35" class="ln">    35&nbsp;&nbsp;</span>	})
-<span id="L36" class="ln">    36&nbsp;&nbsp;</span>
-<span id="L37" class="ln">    37&nbsp;&nbsp;</span>	t.Run(&#34;can&#39;t open output file&#34;, func(t *testing.T) {
-<span id="L38" class="ln">    38&nbsp;&nbsp;</span>		assert.Error(t, run(&#34;./doc.go&#34;, &#34;/cannot/open/file&#34;))
-<span id="L39" class="ln">    39&nbsp;&nbsp;</span>	})
-<span id="L40" class="ln">    40&nbsp;&nbsp;</span>
-<span id="L41" class="ln">    41&nbsp;&nbsp;</span>	t.Run(&#34;invalid template&#34;, func(t *testing.T) {
-<span id="L42" class="ln">    42&nbsp;&nbsp;</span>		tmpl, err := ioutil.TempFile(&#34;&#34;, &#34;&#34;)
-<span id="L43" class="ln">    43&nbsp;&nbsp;</span>		require.NoError(t, err)
-<span id="L44" class="ln">    44&nbsp;&nbsp;</span>		defer os.Remove(tmpl.Name())
-<span id="L45" class="ln">    45&nbsp;&nbsp;</span>		output, err := ioutil.TempFile(&#34;&#34;, &#34;&#34;)
-<span id="L46" class="ln">    46&nbsp;&nbsp;</span>		require.NoError(t, err)
-<span id="L47" class="ln">    47&nbsp;&nbsp;</span>		defer os.Remove(output.Name())
-<span id="L48" class="ln">    48&nbsp;&nbsp;</span>
-<span id="L49" class="ln">    49&nbsp;&nbsp;</span>		_, err = tmpl.WriteString(&#34;{{ InvalidSyntax }}&#34;)
-<span id="L50" class="ln">    50&nbsp;&nbsp;</span>		require.NoError(t, err)
-<span id="L51" class="ln">    51&nbsp;&nbsp;</span>		assert.Error(t, run(tmpl.Name(), output.Name()))
-<span id="L52" class="ln">    52&nbsp;&nbsp;</span>	})
-<span id="L53" class="ln">    53&nbsp;&nbsp;</span>
-<span id="L54" class="ln">    54&nbsp;&nbsp;</span>	t.Run(&#34;happy path&#34;, func(t *testing.T) {
-<span id="L55" class="ln">    55&nbsp;&nbsp;</span>		file, err := ioutil.TempFile(&#34;&#34;, &#34;&#34;)
-<span id="L56" class="ln">    56&nbsp;&nbsp;</span>		require.NoError(t, err)
-<span id="L57" class="ln">    57&nbsp;&nbsp;</span>		defer os.Remove(file.Name())
-<span id="L58" class="ln">    58&nbsp;&nbsp;</span>
-<span id="L59" class="ln">    59&nbsp;&nbsp;</span>		err = run(&#34;./doc.go&#34;, file.Name())
-<span id="L60" class="ln">    60&nbsp;&nbsp;</span>		assert.NoError(t, err)
-<span id="L61" class="ln">    61&nbsp;&nbsp;</span>	})
-<span id="L62" class="ln">    62&nbsp;&nbsp;</span>}
-<span id="L63" class="ln">    63&nbsp;&nbsp;</span>
-<span id="L64" class="ln">    64&nbsp;&nbsp;</span>func TestMain(t *testing.T) {
-<span id="L65" class="ln">    65&nbsp;&nbsp;</span>	cmd.SetupTestExiter(t)
-<span id="L66" class="ln">    66&nbsp;&nbsp;</span>	assert.PanicsWithError(t, &#34;Attempted to exit with exit code 1&#34;, func() {
-<span id="L67" class="ln">    67&nbsp;&nbsp;</span>		main()
-<span id="L68" class="ln">    68&nbsp;&nbsp;</span>	})
-<span id="L69" class="ln">    69&nbsp;&nbsp;</span>}
-<span id="L70" class="ln">    70&nbsp;&nbsp;</span>
-</pre><p><a href="/src/github.com/johnstarich/go/gopages/cmd/gendoc/main_test.go?m=text">View as plain text</a></p>
+<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
+<pre><span id="L1" class="ln">     1  </span>package main
+<span id="L2" class="ln">     2  </span>
+<span id="L3" class="ln">     3  </span>import (
+<span id="L4" class="ln">     4  </span>	&#34;bytes&#34;
+<span id="L5" class="ln">     5  </span>	&#34;io/ioutil&#34;
+<span id="L6" class="ln">     6  </span>	&#34;os&#34;
+<span id="L7" class="ln">     7  </span>	&#34;testing&#34;
+<span id="L8" class="ln">     8  </span>
+<span id="L9" class="ln">     9  </span>	&#34;github.com/johnstarich/go/gopages/cmd&#34;
+<span id="L10" class="ln">    10  </span>	&#34;github.com/stretchr/testify/assert&#34;
+<span id="L11" class="ln">    11  </span>	&#34;github.com/stretchr/testify/require&#34;
+<span id="L12" class="ln">    12  </span>)
+<span id="L13" class="ln">    13  </span>
+<span id="L14" class="ln">    14  </span>func TestDocUpToDate(t *testing.T) {
+<span id="L15" class="ln">    15  </span>	templateBytes, err := ioutil.ReadFile(&#34;doc.go&#34;)
+<span id="L16" class="ln">    16  </span>	require.NoError(t, err)
+<span id="L17" class="ln">    17  </span>	var newDoc bytes.Buffer
+<span id="L18" class="ln">    18  </span>	err = genDoc(templateBytes, &amp;newDoc)
+<span id="L19" class="ln">    19  </span>	require.NoError(t, err)
+<span id="L20" class="ln">    20  </span>
+<span id="L21" class="ln">    21  </span>	currentDoc, err := ioutil.ReadFile(&#34;../../doc.go&#34;)
+<span id="L22" class="ln">    22  </span>	require.NoError(t, err)
+<span id="L23" class="ln">    23  </span>	if !assert.Equal(t, newDoc.String(), string(currentDoc)) {
+<span id="L24" class="ln">    24  </span>		t.Log(&#34;Usage docs are out of date: Run `go generate ./...` to regenerate them.&#34;)
+<span id="L25" class="ln">    25  </span>	}
+<span id="L26" class="ln">    26  </span>}
+<span id="L27" class="ln">    27  </span>
+<span id="L28" class="ln">    28  </span>func TestRun(t *testing.T) {
+<span id="L29" class="ln">    29  </span>	t.Run(&#34;no args&#34;, func(t *testing.T) {
+<span id="L30" class="ln">    30  </span>		assert.EqualError(t, run(&#34;&#34;, &#34;&#34;), &#34;Provide doc template and output file paths&#34;)
+<span id="L31" class="ln">    31  </span>	})
+<span id="L32" class="ln">    32  </span>
+<span id="L33" class="ln">    33  </span>	t.Run(&#34;missing template file&#34;, func(t *testing.T) {
+<span id="L34" class="ln">    34  </span>		assert.Error(t, run(&#34;/does/not/exist&#34;, &#34;unused&#34;))
+<span id="L35" class="ln">    35  </span>	})
+<span id="L36" class="ln">    36  </span>
+<span id="L37" class="ln">    37  </span>	t.Run(&#34;can&#39;t open output file&#34;, func(t *testing.T) {
+<span id="L38" class="ln">    38  </span>		assert.Error(t, run(&#34;./doc.go&#34;, &#34;/cannot/open/file&#34;))
+<span id="L39" class="ln">    39  </span>	})
+<span id="L40" class="ln">    40  </span>
+<span id="L41" class="ln">    41  </span>	t.Run(&#34;invalid template&#34;, func(t *testing.T) {
+<span id="L42" class="ln">    42  </span>		tmpl, err := ioutil.TempFile(&#34;&#34;, &#34;&#34;)
+<span id="L43" class="ln">    43  </span>		require.NoError(t, err)
+<span id="L44" class="ln">    44  </span>		defer os.Remove(tmpl.Name())
+<span id="L45" class="ln">    45  </span>		output, err := ioutil.TempFile(&#34;&#34;, &#34;&#34;)
+<span id="L46" class="ln">    46  </span>		require.NoError(t, err)
+<span id="L47" class="ln">    47  </span>		defer os.Remove(output.Name())
+<span id="L48" class="ln">    48  </span>
+<span id="L49" class="ln">    49  </span>		_, err = tmpl.WriteString(&#34;{{ InvalidSyntax }}&#34;)
+<span id="L50" class="ln">    50  </span>		require.NoError(t, err)
+<span id="L51" class="ln">    51  </span>		assert.Error(t, run(tmpl.Name(), output.Name()))
+<span id="L52" class="ln">    52  </span>	})
+<span id="L53" class="ln">    53  </span>
+<span id="L54" class="ln">    54  </span>	t.Run(&#34;happy path&#34;, func(t *testing.T) {
+<span id="L55" class="ln">    55  </span>		file, err := ioutil.TempFile(&#34;&#34;, &#34;&#34;)
+<span id="L56" class="ln">    56  </span>		require.NoError(t, err)
+<span id="L57" class="ln">    57  </span>		defer os.Remove(file.Name())
+<span id="L58" class="ln">    58  </span>
+<span id="L59" class="ln">    59  </span>		err = run(&#34;./doc.go&#34;, file.Name())
+<span id="L60" class="ln">    60  </span>		assert.NoError(t, err)
+<span id="L61" class="ln">    61  </span>	})
+<span id="L62" class="ln">    62  </span>}
+<span id="L63" class="ln">    63  </span>
+<span id="L64" class="ln">    64  </span>func TestMain(t *testing.T) {
+<span id="L65" class="ln">    65  </span>	cmd.SetupTestExiter(t)
+<span id="L66" class="ln">    66  </span>	assert.PanicsWithError(t, &#34;Attempted to exit with exit code 1&#34;, func() {
+<span id="L67" class="ln">    67  </span>		main()
+<span id="L68" class="ln">    68  </span>	})
+<span id="L69" class="ln">    69  </span>}
+<span id="L70" class="ln">    70  </span>
+</pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br>
+Build version go1.13.11.<br/>
 </div>
 
 </div><!-- .container -->
 </div><!-- #page -->
-</body>
-</html>
+
+
+</body></html>
