--- a/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/doc.go.html
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#375EAB">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#375EAB"/>
 
   <title>src/github.com/johnstarich/go/gopages/doc.go - GoPages</title>
 
-<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css">
+<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css"/>
 
 <script>window.initFuncs = [];</script>
-<script src="/go/gopages/lib/godoc/jquery.js" defer></script>
+<script src="/go/gopages/lib/godoc/jquery.js" defer=""></script>
 
 
 
 <script>var goVersion = "go1.13.11";</script>
-<script src="/go/gopages/lib/godoc/godocs.js" defer></script>
+<script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
 
-<div id='lowframe' style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
+<div id="lowframe" style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
 ...
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/">GoPages</a></div>
-<a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
+<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages</a></div>
+<a href="#" id="menu-button"><span id="menu-button-arrow">▽</span></a>
 
 </div></div>
 
@@ -38,7 +36,7 @@
 
   <h1>
     Source file
-    <a href="/src">src</a>/<a href="/src/github.com">github.com</a>/<a href="/src/github.com/johnstarich">johnstarich</a>/<a href="/src/github.com/johnstarich/go">go</a>/<a href="/src/github.com/johnstarich/go/gopages">gopages</a>/<span class="text-muted">doc.go</span>
+    <a href="/go/gopages/src">src</a>/<a href="/go/gopages/src/github.com">github.com</a>/<a href="/go/gopages/src/github.com/johnstarich">johnstarich</a>/<a href="/go/gopages/src/github.com/johnstarich/go">go</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages">gopages</a>/<span class="text-muted">doc.go</span>
   </h1>
 
 
@@ -46,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/pkg/github.com/johnstarich/go/gopages">github.com/johnstarich/go/gopages</a>
+    Documentation: <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages">github.com/johnstarich/go/gopages</a>
   </h2>
 
 
@@ -54,44 +52,45 @@
 <div id="nav"></div>
 
 
-<script type='text/javascript'>document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1&nbsp;&nbsp;</span><span class="comment">// gopages generates static files for Go documentation, formatted with godoc.</span>
-<span id="L2" class="ln">     2&nbsp;&nbsp;</span><span class="comment">//</span>
-<span id="L3" class="ln">     3&nbsp;&nbsp;</span><span class="comment">// Installation:</span>
-<span id="L4" class="ln">     4&nbsp;&nbsp;</span><span class="comment">//   go get github.com/johnstarich/go/gopages</span>
-<span id="L5" class="ln">     5&nbsp;&nbsp;</span><span class="comment">//</span>
-<span id="L6" class="ln">     6&nbsp;&nbsp;</span><span class="comment">// Generate documentation for your module by running without any flags.</span>
-<span id="L7" class="ln">     7&nbsp;&nbsp;</span><span class="comment">//</span>
-<span id="L8" class="ln">     8&nbsp;&nbsp;</span><span class="comment">// A &#39;go.mod&#39; file must be present in the current directory.</span>
-<span id="L9" class="ln">     9&nbsp;&nbsp;</span><span class="comment">//   cd ./mymodule</span>
-<span id="L10" class="ln">    10&nbsp;&nbsp;</span><span class="comment">//   gopages</span>
-<span id="L11" class="ln">    11&nbsp;&nbsp;</span><span class="comment">//</span>
-<span id="L12" class="ln">    12&nbsp;&nbsp;</span><span class="comment">// Usage of gopages:</span>
-<span id="L13" class="ln">    13&nbsp;&nbsp;</span><span class="comment">//   -base string</span>
-<span id="L14" class="ln">    14&nbsp;&nbsp;</span><span class="comment">//     	Base URL to use for static assets</span>
-<span id="L15" class="ln">    15&nbsp;&nbsp;</span><span class="comment">//   -brand-description string</span>
-<span id="L16" class="ln">    16&nbsp;&nbsp;</span><span class="comment">//     	Branding description in the top left of documentation</span>
-<span id="L17" class="ln">    17&nbsp;&nbsp;</span><span class="comment">//   -brand-title string</span>
-<span id="L18" class="ln">    18&nbsp;&nbsp;</span><span class="comment">//     	Branding title in the top left of documentation</span>
-<span id="L19" class="ln">    19&nbsp;&nbsp;</span><span class="comment">//   -gh-pages</span>
-<span id="L20" class="ln">    20&nbsp;&nbsp;</span><span class="comment">//     	Automatically commit the output path to the gh-pages branch. The current branch must be clean.</span>
-<span id="L21" class="ln">    21&nbsp;&nbsp;</span><span class="comment">//   -gh-pages-token string</span>
-<span id="L22" class="ln">    22&nbsp;&nbsp;</span><span class="comment">//     	The Git token to push with. Usually this is an API key.</span>
-<span id="L23" class="ln">    23&nbsp;&nbsp;</span><span class="comment">//   -gh-pages-user string</span>
-<span id="L24" class="ln">    24&nbsp;&nbsp;</span><span class="comment">//     	The Git username to push with</span>
-<span id="L25" class="ln">    25&nbsp;&nbsp;</span><span class="comment">//   -out string</span>
-<span id="L26" class="ln">    26&nbsp;&nbsp;</span><span class="comment">//     	Output path for static files (default &#34;dist&#34;)</span>
-<span id="L27" class="ln">    27&nbsp;&nbsp;</span><span class="comment">// </span>
-<span id="L28" class="ln">    28&nbsp;&nbsp;</span><span class="comment">//</span>
-<span id="L29" class="ln">    29&nbsp;&nbsp;</span>package main
-<span id="L30" class="ln">    30&nbsp;&nbsp;</span>
-</pre><p><a href="/src/github.com/johnstarich/go/gopages/doc.go?m=text">View as plain text</a></p>
+<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// gopages generates static files for Go documentation, formatted with godoc.</span>
+<span id="L2" class="ln">     2  </span><span class="comment">//</span>
+<span id="L3" class="ln">     3  </span><span class="comment">// Installation:</span>
+<span id="L4" class="ln">     4  </span><span class="comment">//   go get github.com/johnstarich/go/gopages</span>
+<span id="L5" class="ln">     5  </span><span class="comment">//</span>
+<span id="L6" class="ln">     6  </span><span class="comment">// Generate documentation for your module by running without any flags.</span>
+<span id="L7" class="ln">     7  </span><span class="comment">//</span>
+<span id="L8" class="ln">     8  </span><span class="comment">// A &#39;go.mod&#39; file must be present in the current directory.</span>
+<span id="L9" class="ln">     9  </span><span class="comment">//   cd ./mymodule</span>
+<span id="L10" class="ln">    10  </span><span class="comment">//   gopages</span>
+<span id="L11" class="ln">    11  </span><span class="comment">//</span>
+<span id="L12" class="ln">    12  </span><span class="comment">// Usage of gopages:</span>
+<span id="L13" class="ln">    13  </span><span class="comment">//   -base string</span>
+<span id="L14" class="ln">    14  </span><span class="comment">//     	Base URL to use for static assets</span>
+<span id="L15" class="ln">    15  </span><span class="comment">//   -brand-description string</span>
+<span id="L16" class="ln">    16  </span><span class="comment">//     	Branding description in the top left of documentation</span>
+<span id="L17" class="ln">    17  </span><span class="comment">//   -brand-title string</span>
+<span id="L18" class="ln">    18  </span><span class="comment">//     	Branding title in the top left of documentation</span>
+<span id="L19" class="ln">    19  </span><span class="comment">//   -gh-pages</span>
+<span id="L20" class="ln">    20  </span><span class="comment">//     	Automatically commit the output path to the gh-pages branch. The current branch must be clean.</span>
+<span id="L21" class="ln">    21  </span><span class="comment">//   -gh-pages-token string</span>
+<span id="L22" class="ln">    22  </span><span class="comment">//     	The Git token to push with. Usually this is an API key.</span>
+<span id="L23" class="ln">    23  </span><span class="comment">//   -gh-pages-user string</span>
+<span id="L24" class="ln">    24  </span><span class="comment">//     	The Git username to push with</span>
+<span id="L25" class="ln">    25  </span><span class="comment">//   -out string</span>
+<span id="L26" class="ln">    26  </span><span class="comment">//     	Output path for static files (default &#34;dist&#34;)</span>
+<span id="L27" class="ln">    27  </span><span class="comment">// </span>
+<span id="L28" class="ln">    28  </span><span class="comment">//</span>
+<span id="L29" class="ln">    29  </span>package main
+<span id="L30" class="ln">    30  </span>
+</pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br>
+Build version go1.13.11.<br/>
 </div>
 
 </div><!-- .container -->
 </div><!-- #page -->
-</body>
-</html>
+
+
+</body></html>
