--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags.go.html
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#375EAB">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#375EAB"/>
 
   <title>src/github.com/johnstarich/go/gopages/internal/flags/flags.go - GoPages</title>
 
-<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css">
+<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css"/>
 
 <script>window.initFuncs = [];</script>
-<script src="/go/gopages/lib/godoc/jquery.js" defer></script>
+<script src="/go/gopages/lib/godoc/jquery.js" defer=""></script>
 
 
 
 <script>var goVersion = "go1.13.11";</script>
-<script src="/go/gopages/lib/godoc/godocs.js" defer></script>
+<script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
 
-<div id='lowframe' style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
+<div id="lowframe" style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
 ...
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/">GoPages</a></div>
-<a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
+<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages</a></div>
+<a href="#" id="menu-button"><span id="menu-button-arrow">▽</span></a>
 
 </div></div>
 
@@ -38,7 +36,7 @@
 
   <h1>
     Source file
-    <a href="/src">src</a>/<a href="/src/github.com">github.com</a>/<a href="/src/github.com/johnstarich">johnstarich</a>/<a href="/src/github.com/johnstarich/go">go</a>/<a href="/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/src/github.com/johnstarich/go/gopages/internal">internal</a>/<a href="/src/github.com/johnstarich/go/gopages/internal/flags">flags</a>/<span class="text-muted">flags.go</span>
+    <a href="/go/gopages/src">src</a>/<a href="/go/gopages/src/github.com">github.com</a>/<a href="/go/gopages/src/github.com/johnstarich">johnstarich</a>/<a href="/go/gopages/src/github.com/johnstarich/go">go</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal">internal</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/flags">flags</a>/<span class="text-muted">flags.go</span>
   </h1>
 
 
@@ -46,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/pkg/github.com/johnstarich/go/gopages/internal/flags">github.com/johnstarich/go/gopages/internal/flags</a>
+    Documentation: <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags">github.com/johnstarich/go/gopages/internal/flags</a>
   </h2>
 
 
@@ -54,47 +52,49 @@
 <div id="nav"></div>
 
 
-<script type='text/javascript'>document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1&nbsp;&nbsp;</span>package flags
-<span id="L2" class="ln">     2&nbsp;&nbsp;</span>
-<span id="L3" class="ln">     3&nbsp;&nbsp;</span>import (
-<span id="L4" class="ln">     4&nbsp;&nbsp;</span>	&#34;bytes&#34;
-<span id="L5" class="ln">     5&nbsp;&nbsp;</span>	&#34;flag&#34;
-<span id="L6" class="ln">     6&nbsp;&nbsp;</span>)
-<span id="L7" class="ln">     7&nbsp;&nbsp;</span>
-<span id="L8" class="ln">     8&nbsp;&nbsp;</span>type Args struct {
-<span id="L9" class="ln">     9&nbsp;&nbsp;</span>	BaseURL          string
-<span id="L10" class="ln">    10&nbsp;&nbsp;</span>	GitHubPages      bool
-<span id="L11" class="ln">    11&nbsp;&nbsp;</span>	GitHubPagesToken string
-<span id="L12" class="ln">    12&nbsp;&nbsp;</span>	GitHubPagesUser  string
-<span id="L13" class="ln">    13&nbsp;&nbsp;</span>	OutputPath       string
-<span id="L14" class="ln">    14&nbsp;&nbsp;</span>	SiteDescription  string
-<span id="L15" class="ln">    15&nbsp;&nbsp;</span>	SiteTitle        string
-<span id="L16" class="ln">    16&nbsp;&nbsp;</span>}
-<span id="L17" class="ln">    17&nbsp;&nbsp;</span>
-<span id="L18" class="ln">    18&nbsp;&nbsp;</span>func Parse(osArgs ...string) (Args, string, error) {
-<span id="L19" class="ln">    19&nbsp;&nbsp;</span>	var args Args
-<span id="L20" class="ln">    20&nbsp;&nbsp;</span>	commandLine := flag.NewFlagSet(&#34;gopages&#34;, flag.ContinueOnError)
-<span id="L21" class="ln">    21&nbsp;&nbsp;</span>	commandLine.StringVar(&amp;args.OutputPath, &#34;out&#34;, &#34;dist&#34;, &#34;Output path for static files&#34;)
-<span id="L22" class="ln">    22&nbsp;&nbsp;</span>	commandLine.StringVar(&amp;args.BaseURL, &#34;base&#34;, &#34;&#34;, &#34;Base URL to use for static assets&#34;)
-<span id="L23" class="ln">    23&nbsp;&nbsp;</span>	commandLine.StringVar(&amp;args.SiteTitle, &#34;brand-title&#34;, &#34;&#34;, &#34;Branding title in the top left of documentation&#34;)
-<span id="L24" class="ln">    24&nbsp;&nbsp;</span>	commandLine.StringVar(&amp;args.SiteDescription, &#34;brand-description&#34;, &#34;&#34;, &#34;Branding description in the top left of documentation&#34;)
-<span id="L25" class="ln">    25&nbsp;&nbsp;</span>	commandLine.BoolVar(&amp;args.GitHubPages, &#34;gh-pages&#34;, false, &#34;Automatically commit the output path to the gh-pages branch. The current branch must be clean.&#34;)
-<span id="L26" class="ln">    26&nbsp;&nbsp;</span>	commandLine.StringVar(&amp;args.GitHubPagesUser, &#34;gh-pages-user&#34;, &#34;&#34;, &#34;The Git username to push with&#34;)
-<span id="L27" class="ln">    27&nbsp;&nbsp;</span>	commandLine.StringVar(&amp;args.GitHubPagesToken, &#34;gh-pages-token&#34;, &#34;&#34;, &#34;The Git token to push with. Usually this is an API key.&#34;)
-<span id="L28" class="ln">    28&nbsp;&nbsp;</span>	var output bytes.Buffer
-<span id="L29" class="ln">    29&nbsp;&nbsp;</span>	commandLine.SetOutput(&amp;output)
-<span id="L30" class="ln">    30&nbsp;&nbsp;</span>	err := commandLine.Parse(osArgs) <span class="comment">// prints usage if fails</span>
-<span id="L31" class="ln">    31&nbsp;&nbsp;</span>	return args, output.String(), err
-<span id="L32" class="ln">    32&nbsp;&nbsp;</span>}
-<span id="L33" class="ln">    33&nbsp;&nbsp;</span>
-</pre><p><a href="/src/github.com/johnstarich/go/gopages/internal/flags/flags.go?m=text">View as plain text</a></p>
+<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
+<pre><span id="L1" class="ln">     1  </span>package flags
+<span id="L2" class="ln">     2  </span>
+<span id="L3" class="ln">     3  </span>import (
+<span id="L4" class="ln">     4  </span>	&#34;bytes&#34;
+<span id="L5" class="ln">     5  </span>	&#34;flag&#34;
+<span id="L6" class="ln">     6  </span>)
+<span id="L7" class="ln">     7  </span>
+<span id="L8" class="ln">     8  </span><span class="comment">// Args contains all command-line options for gopages</span>
+<span id="L9" class="ln">     9  </span>type Args struct {
+<span id="L10" class="ln">    10  </span>	BaseURL          string
+<span id="L11" class="ln">    11  </span>	GitHubPages      bool
+<span id="L12" class="ln">    12  </span>	GitHubPagesToken string
+<span id="L13" class="ln">    13  </span>	GitHubPagesUser  string
+<span id="L14" class="ln">    14  </span>	OutputPath       string
+<span id="L15" class="ln">    15  </span>	SiteDescription  string
+<span id="L16" class="ln">    16  </span>	SiteTitle        string
+<span id="L17" class="ln">    17  </span>}
+<span id="L18" class="ln">    18  </span>
+<span id="L19" class="ln">    19  </span>func Parse(osArgs ...string) (Args, string, error) {
+<span id="L20" class="ln">    20  </span>	var args Args
+<span id="L21" class="ln">    21  </span>	commandLine := flag.NewFlagSet(&#34;gopages&#34;, flag.ContinueOnError)
+<span id="L22" class="ln">    22  </span>	commandLine.StringVar(&amp;args.OutputPath, &#34;out&#34;, &#34;dist&#34;, &#34;Output path for static files&#34;)
+<span id="L23" class="ln">    23  </span>	commandLine.StringVar(&amp;args.BaseURL, &#34;base&#34;, &#34;&#34;, &#34;Base URL to use for static assets&#34;)
+<span id="L24" class="ln">    24  </span>	commandLine.StringVar(&amp;args.SiteTitle, &#34;brand-title&#34;, &#34;&#34;, &#34;Branding title in the top left of documentation&#34;)
+<span id="L25" class="ln">    25  </span>	commandLine.StringVar(&amp;args.SiteDescription, &#34;brand-description&#34;, &#34;&#34;, &#34;Branding description in the top left of documentation&#34;)
+<span id="L26" class="ln">    26  </span>	commandLine.BoolVar(&amp;args.GitHubPages, &#34;gh-pages&#34;, false, &#34;Automatically commit the output path to the gh-pages branch. The current branch must be clean.&#34;)
+<span id="L27" class="ln">    27  </span>	commandLine.StringVar(&amp;args.GitHubPagesUser, &#34;gh-pages-user&#34;, &#34;&#34;, &#34;The Git username to push with&#34;)
+<span id="L28" class="ln">    28  </span>	commandLine.StringVar(&amp;args.GitHubPagesToken, &#34;gh-pages-token&#34;, &#34;&#34;, &#34;The Git token to push with. Usually this is an API key.&#34;)
+<span id="L29" class="ln">    29  </span>	var output bytes.Buffer
+<span id="L30" class="ln">    30  </span>	commandLine.SetOutput(&amp;output)
+<span id="L31" class="ln">    31  </span>	err := commandLine.Parse(osArgs) <span class="comment">// prints usage if fails</span>
+<span id="L32" class="ln">    32  </span>	return args, output.String(), err
+<span id="L33" class="ln">    33  </span>}
+<span id="L34" class="ln">    34  </span>
+</pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br>
+Build version go1.13.11.<br/>
 </div>
 
 </div><!-- .container -->
 </div><!-- #page -->
-</body>
-</html>
+
+
+</body></html>
