--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags_test.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags_test.go.html
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#375EAB">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#375EAB"/>
 
   <title>src/github.com/johnstarich/go/gopages/internal/flags/flags_test.go - GoPages</title>
 
-<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css">
+<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css"/>
 
 <script>window.initFuncs = [];</script>
-<script src="/go/gopages/lib/godoc/jquery.js" defer></script>
+<script src="/go/gopages/lib/godoc/jquery.js" defer=""></script>
 
 
 
 <script>var goVersion = "go1.13.11";</script>
-<script src="/go/gopages/lib/godoc/godocs.js" defer></script>
+<script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
 
-<div id='lowframe' style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
+<div id="lowframe" style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
 ...
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/">GoPages</a></div>
-<a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
+<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages</a></div>
+<a href="#" id="menu-button"><span id="menu-button-arrow">▽</span></a>
 
 </div></div>
 
@@ -38,7 +36,7 @@
 
   <h1>
     Source file
-    <a href="/src">src</a>/<a href="/src/github.com">github.com</a>/<a href="/src/github.com/johnstarich">johnstarich</a>/<a href="/src/github.com/johnstarich/go">go</a>/<a href="/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/src/github.com/johnstarich/go/gopages/internal">internal</a>/<a href="/src/github.com/johnstarich/go/gopages/internal/flags">flags</a>/<span class="text-muted">flags_test.go</span>
+    <a href="/go/gopages/src">src</a>/<a href="/go/gopages/src/github.com">github.com</a>/<a href="/go/gopages/src/github.com/johnstarich">johnstarich</a>/<a href="/go/gopages/src/github.com/johnstarich/go">go</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal">internal</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/flags">flags</a>/<span class="text-muted">flags_test.go</span>
   </h1>
 
 
@@ -46,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/pkg/github.com/johnstarich/go/gopages/internal/flags">github.com/johnstarich/go/gopages/internal/flags</a>
+    Documentation: <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/flags">github.com/johnstarich/go/gopages/internal/flags</a>
   </h2>
 
 
@@ -54,32 +52,33 @@
 <div id="nav"></div>
 
 
-<script type='text/javascript'>document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1&nbsp;&nbsp;</span>package flags
-<span id="L2" class="ln">     2&nbsp;&nbsp;</span>
-<span id="L3" class="ln">     3&nbsp;&nbsp;</span>import (
-<span id="L4" class="ln">     4&nbsp;&nbsp;</span>	&#34;flag&#34;
-<span id="L5" class="ln">     5&nbsp;&nbsp;</span>	&#34;testing&#34;
-<span id="L6" class="ln">     6&nbsp;&nbsp;</span>
-<span id="L7" class="ln">     7&nbsp;&nbsp;</span>	&#34;github.com/stretchr/testify/assert&#34;
-<span id="L8" class="ln">     8&nbsp;&nbsp;</span>)
-<span id="L9" class="ln">     9&nbsp;&nbsp;</span>
-<span id="L10" class="ln">    10&nbsp;&nbsp;</span>func TestParse(t *testing.T) {
-<span id="L11" class="ln">    11&nbsp;&nbsp;</span>	args, output, err := Parse(&#34;-help&#34;)
-<span id="L12" class="ln">    12&nbsp;&nbsp;</span>	assert.Equal(t, Args{
-<span id="L13" class="ln">    13&nbsp;&nbsp;</span>		OutputPath: &#34;dist&#34;,
-<span id="L14" class="ln">    14&nbsp;&nbsp;</span>	}, args)
-<span id="L15" class="ln">    15&nbsp;&nbsp;</span>	assert.NotEmpty(t, output)
-<span id="L16" class="ln">    16&nbsp;&nbsp;</span>	assert.Equal(t, flag.ErrHelp, err)
-<span id="L17" class="ln">    17&nbsp;&nbsp;</span>}
-<span id="L18" class="ln">    18&nbsp;&nbsp;</span>
-</pre><p><a href="/src/github.com/johnstarich/go/gopages/internal/flags/flags_test.go?m=text">View as plain text</a></p>
+<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
+<pre><span id="L1" class="ln">     1  </span>package flags
+<span id="L2" class="ln">     2  </span>
+<span id="L3" class="ln">     3  </span>import (
+<span id="L4" class="ln">     4  </span>	&#34;flag&#34;
+<span id="L5" class="ln">     5  </span>	&#34;testing&#34;
+<span id="L6" class="ln">     6  </span>
+<span id="L7" class="ln">     7  </span>	&#34;github.com/stretchr/testify/assert&#34;
+<span id="L8" class="ln">     8  </span>)
+<span id="L9" class="ln">     9  </span>
+<span id="L10" class="ln">    10  </span>func TestParse(t *testing.T) {
+<span id="L11" class="ln">    11  </span>	args, output, err := Parse(&#34;-help&#34;)
+<span id="L12" class="ln">    12  </span>	assert.Equal(t, Args{
+<span id="L13" class="ln">    13  </span>		OutputPath: &#34;dist&#34;,
+<span id="L14" class="ln">    14  </span>	}, args)
+<span id="L15" class="ln">    15  </span>	assert.NotEmpty(t, output)
+<span id="L16" class="ln">    16  </span>	assert.Equal(t, flag.ErrHelp, err)
+<span id="L17" class="ln">    17  </span>}
+<span id="L18" class="ln">    18  </span>
+</pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br>
+Build version go1.13.11.<br/>
 </div>
 
 </div><!-- .container -->
 </div><!-- #page -->
-</body>
-</html>
+
+
+</body></html>
