--- a/gopages/src/github.com/johnstarich/go/gopages/internal/pipe/op.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/pipe/op.go.html
@@ -1,32 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="theme-color" content="#375EAB">
+<!DOCTYPE html><html><head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+<meta name="viewport" content="width=device-width, initial-scale=1"/>
+<meta name="theme-color" content="#375EAB"/>
 
   <title>src/github.com/johnstarich/go/gopages/internal/pipe/op.go - GoPages</title>
 
-<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css">
+<link type="text/css" rel="stylesheet" href="/go/gopages/lib/godoc/style.css"/>
 
 <script>window.initFuncs = [];</script>
-<script src="/go/gopages/lib/godoc/jquery.js" defer></script>
+<script src="/go/gopages/lib/godoc/jquery.js" defer=""></script>
 
 
 
 <script>var goVersion = "go1.13.11";</script>
-<script src="/go/gopages/lib/godoc/godocs.js" defer></script>
+<script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
 
-<div id='lowframe' style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
+<div id="lowframe" style="position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;">
 ...
 </div><!-- #lowframe -->
 
 <div id="topbar" class="wide"><div class="container">
-<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/">GoPages | Auto-generated docs</a></div>
-<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/">GoPages</a></div>
-<a href="#" id="menu-button"><span id="menu-button-arrow">&#9661;</span></a>
+<div class="top-heading" id="heading-wide"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages | Auto-generated docs</a></div>
+<div class="top-heading" id="heading-narrow"><a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/">GoPages</a></div>
+<a href="#" id="menu-button"><span id="menu-button-arrow">▽</span></a>
 
 </div></div>
 
@@ -38,7 +36,7 @@
 
   <h1>
     Source file
-    <a href="/src">src</a>/<a href="/src/github.com">github.com</a>/<a href="/src/github.com/johnstarich">johnstarich</a>/<a href="/src/github.com/johnstarich/go">go</a>/<a href="/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/src/github.com/johnstarich/go/gopages/internal">internal</a>/<a href="/src/github.com/johnstarich/go/gopages/internal/pipe">pipe</a>/<span class="text-muted">op.go</span>
+    <a href="/go/gopages/src">src</a>/<a href="/go/gopages/src/github.com">github.com</a>/<a href="/go/gopages/src/github.com/johnstarich">johnstarich</a>/<a href="/go/gopages/src/github.com/johnstarich/go">go</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages">gopages</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal">internal</a>/<a href="/go/gopages/src/github.com/johnstarich/go/gopages/internal/pipe">pipe</a>/<span class="text-muted">op.go</span>
   </h1>
 
 
@@ -46,7 +44,7 @@
 
 
   <h2>
-    Documentation: <a href="/pkg/github.com/johnstarich/go/gopages/internal/pipe">github.com/johnstarich/go/gopages/internal/pipe</a>
+    Documentation: <a href="/go/gopages/pkg/github.com/johnstarich/go/gopages/internal/pipe">github.com/johnstarich/go/gopages/internal/pipe</a>
   </h2>
 
 
@@ -54,66 +52,67 @@
 <div id="nav"></div>
 
 
-<script type='text/javascript'>document.ANALYSIS_DATA = null;</script>
-<pre><span id="L1" class="ln">     1&nbsp;&nbsp;</span><span class="comment">// Package pipe helps chain together multiple error-returning operations, such that the first error is returned immediately.</span>
-<span id="L2" class="ln">     2&nbsp;&nbsp;</span><span class="comment">// This is especially useful on error guards for eliminating boilerplate and easily achieving full test coverage.</span>
-<span id="L3" class="ln">     3&nbsp;&nbsp;</span><span class="comment">//</span>
-<span id="L4" class="ln">     4&nbsp;&nbsp;</span>package pipe
-<span id="L5" class="ln">     5&nbsp;&nbsp;</span>
-<span id="L6" class="ln">     6&nbsp;&nbsp;</span><span class="comment">// Op creates an error-returning operation abstraction to help eliminate error handling boilerplate</span>
-<span id="L7" class="ln">     7&nbsp;&nbsp;</span>type Op interface {
-<span id="L8" class="ln">     8&nbsp;&nbsp;</span>	Do() error
-<span id="L9" class="ln">     9&nbsp;&nbsp;</span>}
-<span id="L10" class="ln">    10&nbsp;&nbsp;</span>
-<span id="L11" class="ln">    11&nbsp;&nbsp;</span><span class="comment">// OpFunc is an Op and is interchangeable with the corresponding function type.</span>
-<span id="L12" class="ln">    12&nbsp;&nbsp;</span><span class="comment">// OpFuncs are useful for inlining custom functions as Ops.</span>
-<span id="L13" class="ln">    13&nbsp;&nbsp;</span>type OpFunc func() error
-<span id="L14" class="ln">    14&nbsp;&nbsp;</span>
-<span id="L15" class="ln">    15&nbsp;&nbsp;</span>func (o OpFunc) Do() error {
-<span id="L16" class="ln">    16&nbsp;&nbsp;</span>	return o()
-<span id="L17" class="ln">    17&nbsp;&nbsp;</span>}
-<span id="L18" class="ln">    18&nbsp;&nbsp;</span>
-<span id="L19" class="ln">    19&nbsp;&nbsp;</span>type chain []Op
-<span id="L20" class="ln">    20&nbsp;&nbsp;</span>
-<span id="L21" class="ln">    21&nbsp;&nbsp;</span><span class="comment">// Chain combines each Op into a chain. When executed, each Op is run in-order</span>
-<span id="L22" class="ln">    22&nbsp;&nbsp;</span><span class="comment">// and the first error is returned immediately.</span>
-<span id="L23" class="ln">    23&nbsp;&nbsp;</span>func Chain(ops ...Op) Op {
-<span id="L24" class="ln">    24&nbsp;&nbsp;</span>	return chain(ops)
-<span id="L25" class="ln">    25&nbsp;&nbsp;</span>}
-<span id="L26" class="ln">    26&nbsp;&nbsp;</span>
-<span id="L27" class="ln">    27&nbsp;&nbsp;</span><span class="comment">// ChainFuncs is identical to Chain, but takes the more convenient OpFunc type instead</span>
-<span id="L28" class="ln">    28&nbsp;&nbsp;</span>func ChainFuncs(opFuncs ...OpFunc) Op {
-<span id="L29" class="ln">    29&nbsp;&nbsp;</span>	ops := make(chain, len(opFuncs))
-<span id="L30" class="ln">    30&nbsp;&nbsp;</span>	for i := range ops {
-<span id="L31" class="ln">    31&nbsp;&nbsp;</span>		ops[i] = opFuncs[i]
-<span id="L32" class="ln">    32&nbsp;&nbsp;</span>	}
-<span id="L33" class="ln">    33&nbsp;&nbsp;</span>	return ops
-<span id="L34" class="ln">    34&nbsp;&nbsp;</span>}
-<span id="L35" class="ln">    35&nbsp;&nbsp;</span>
-<span id="L36" class="ln">    36&nbsp;&nbsp;</span>func (c chain) Do() error {
-<span id="L37" class="ln">    37&nbsp;&nbsp;</span>	for _, op := range c {
-<span id="L38" class="ln">    38&nbsp;&nbsp;</span>		if err := op.Do(); err != nil {
-<span id="L39" class="ln">    39&nbsp;&nbsp;</span>			return err
-<span id="L40" class="ln">    40&nbsp;&nbsp;</span>		}
-<span id="L41" class="ln">    41&nbsp;&nbsp;</span>	}
-<span id="L42" class="ln">    42&nbsp;&nbsp;</span>	return nil
-<span id="L43" class="ln">    43&nbsp;&nbsp;</span>}
-<span id="L44" class="ln">    44&nbsp;&nbsp;</span>
-<span id="L45" class="ln">    45&nbsp;&nbsp;</span><span class="comment">// ErrIf returns &#39;err&#39; if &#39;cond&#39; is true, nil otherwise</span>
-<span id="L46" class="ln">    46&nbsp;&nbsp;</span>func ErrIf(cond bool, err error) error {
-<span id="L47" class="ln">    47&nbsp;&nbsp;</span>	if cond {
-<span id="L48" class="ln">    48&nbsp;&nbsp;</span>		return err
-<span id="L49" class="ln">    49&nbsp;&nbsp;</span>	}
-<span id="L50" class="ln">    50&nbsp;&nbsp;</span>	return nil
-<span id="L51" class="ln">    51&nbsp;&nbsp;</span>}
-<span id="L52" class="ln">    52&nbsp;&nbsp;</span>
-</pre><p><a href="/src/github.com/johnstarich/go/gopages/internal/pipe/op.go?m=text">View as plain text</a></p>
+<script type="text/javascript">document.ANALYSIS_DATA = null;</script>
+<pre><span id="L1" class="ln">     1  </span><span class="comment">// Package pipe helps chain together multiple error-returning operations, such that the first error is returned immediately.</span>
+<span id="L2" class="ln">     2  </span><span class="comment">// This is especially useful on error guards for eliminating boilerplate and easily achieving full test coverage.</span>
+<span id="L3" class="ln">     3  </span><span class="comment">//</span>
+<span id="L4" class="ln">     4  </span>package pipe
+<span id="L5" class="ln">     5  </span>
+<span id="L6" class="ln">     6  </span><span class="comment">// Op creates an error-returning operation abstraction to help eliminate error handling boilerplate</span>
+<span id="L7" class="ln">     7  </span>type Op interface {
+<span id="L8" class="ln">     8  </span>	Do() error
+<span id="L9" class="ln">     9  </span>}
+<span id="L10" class="ln">    10  </span>
+<span id="L11" class="ln">    11  </span><span class="comment">// OpFunc is an Op and is interchangeable with the corresponding function type.</span>
+<span id="L12" class="ln">    12  </span><span class="comment">// OpFuncs are useful for inlining custom functions as Ops.</span>
+<span id="L13" class="ln">    13  </span>type OpFunc func() error
+<span id="L14" class="ln">    14  </span>
+<span id="L15" class="ln">    15  </span>func (o OpFunc) Do() error {
+<span id="L16" class="ln">    16  </span>	return o()
+<span id="L17" class="ln">    17  </span>}
+<span id="L18" class="ln">    18  </span>
+<span id="L19" class="ln">    19  </span>type chain []Op
+<span id="L20" class="ln">    20  </span>
+<span id="L21" class="ln">    21  </span><span class="comment">// Chain combines each Op into a chain. When executed, each Op is run in-order</span>
+<span id="L22" class="ln">    22  </span><span class="comment">// and the first error is returned immediately.</span>
+<span id="L23" class="ln">    23  </span>func Chain(ops ...Op) Op {
+<span id="L24" class="ln">    24  </span>	return chain(ops)
+<span id="L25" class="ln">    25  </span>}
+<span id="L26" class="ln">    26  </span>
+<span id="L27" class="ln">    27  </span><span class="comment">// ChainFuncs is identical to Chain, but takes the more convenient OpFunc type instead</span>
+<span id="L28" class="ln">    28  </span>func ChainFuncs(opFuncs ...OpFunc) Op {
+<span id="L29" class="ln">    29  </span>	ops := make(chain, len(opFuncs))
+<span id="L30" class="ln">    30  </span>	for i := range ops {
+<span id="L31" class="ln">    31  </span>		ops[i] = opFuncs[i]
+<span id="L32" class="ln">    32  </span>	}
+<span id="L33" class="ln">    33  </span>	return ops
+<span id="L34" class="ln">    34  </span>}
+<span id="L35" class="ln">    35  </span>
+<span id="L36" class="ln">    36  </span>func (c chain) Do() error {
+<span id="L37" class="ln">    37  </span>	for _, op := range c {
+<span id="L38" class="ln">    38  </span>		if err := op.Do(); err != nil {
+<span id="L39" class="ln">    39  </span>			return err
+<span id="L40" class="ln">    40  </span>		}
+<span id="L41" class="ln">    41  </span>	}
+<span id="L42" class="ln">    42  </span>	return nil
+<span id="L43" class="ln">    43  </span>}
+<span id="L44" class="ln">    44  </span>
+<span id="L45" class="ln">    45  </span><span class="comment">// ErrIf returns &#39;err&#39; if &#39;cond&#39; is true, nil otherwise</span>
+<span id="L46" class="ln">    46  </span>func ErrIf(cond bool, err error) error {
+<span id="L47" class="ln">    47  </span>	if cond {
+<span id="L48" class="ln">    48  </span>		return err
+<span id="L49" class="ln">    49  </span>	}
+<span id="L50" class="ln">    50  </span>	return nil
+<span id="L51" class="ln">    51  </span>}
+<span id="L52" class="ln">    52  </span>
+</pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br>
+Build version go1.13.11.<br/>
 </div>
 
 </div><!-- .container -->
 </div><!-- #page -->
-</body>
-</html>
+
+
+</body></html>
