--- a/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/flags/flags.go.html
@@ -12,7 +12,8 @@
 
 
 
-<script>var goVersion = "go1.13.11";</script>
+
+<script>var goVersion = "go1.13.12";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
@@ -69,28 +70,29 @@
 <span id="L14" class="ln">    14  </span>	OutputPath       string
 <span id="L15" class="ln">    15  </span>	SiteDescription  string
 <span id="L16" class="ln">    16  </span>	SiteTitle        string
-<span id="L17" class="ln">    17  </span>}
-<span id="L18" class="ln">    18  </span>
-<span id="L19" class="ln">    19  </span>func Parse(osArgs ...string) (Args, string, error) {
-<span id="L20" class="ln">    20  </span>	var args Args
-<span id="L21" class="ln">    21  </span>	commandLine := flag.NewFlagSet(&#34;gopages&#34;, flag.ContinueOnError)
-<span id="L22" class="ln">    22  </span>	commandLine.StringVar(&amp;args.OutputPath, &#34;out&#34;, &#34;dist&#34;, &#34;Output path for static files&#34;)
-<span id="L23" class="ln">    23  </span>	commandLine.StringVar(&amp;args.BaseURL, &#34;base&#34;, &#34;&#34;, &#34;Base URL to use for static assets&#34;)
-<span id="L24" class="ln">    24  </span>	commandLine.StringVar(&amp;args.SiteTitle, &#34;brand-title&#34;, &#34;&#34;, &#34;Branding title in the top left of documentation&#34;)
-<span id="L25" class="ln">    25  </span>	commandLine.StringVar(&amp;args.SiteDescription, &#34;brand-description&#34;, &#34;&#34;, &#34;Branding description in the top left of documentation&#34;)
-<span id="L26" class="ln">    26  </span>	commandLine.BoolVar(&amp;args.GitHubPages, &#34;gh-pages&#34;, false, &#34;Automatically commit the output path to the gh-pages branch. The current branch must be clean.&#34;)
-<span id="L27" class="ln">    27  </span>	commandLine.StringVar(&amp;args.GitHubPagesUser, &#34;gh-pages-user&#34;, &#34;&#34;, &#34;The Git username to push with&#34;)
-<span id="L28" class="ln">    28  </span>	commandLine.StringVar(&amp;args.GitHubPagesToken, &#34;gh-pages-token&#34;, &#34;&#34;, &#34;The Git token to push with. Usually this is an API key.&#34;)
-<span id="L29" class="ln">    29  </span>	var output bytes.Buffer
-<span id="L30" class="ln">    30  </span>	commandLine.SetOutput(&amp;output)
-<span id="L31" class="ln">    31  </span>	err := commandLine.Parse(osArgs) <span class="comment">// prints usage if fails</span>
-<span id="L32" class="ln">    32  </span>	return args, output.String(), err
-<span id="L33" class="ln">    33  </span>}
-<span id="L34" class="ln">    34  </span>
+<span id="L17" class="ln">    17  </span>	Watch            bool <span class="comment">// not added as a flag, only enabled when running from ./cmd/watch</span>
+<span id="L18" class="ln">    18  </span>}
+<span id="L19" class="ln">    19  </span>
+<span id="L20" class="ln">    20  </span>func Parse(osArgs ...string) (Args, string, error) {
+<span id="L21" class="ln">    21  </span>	var args Args
+<span id="L22" class="ln">    22  </span>	commandLine := flag.NewFlagSet(&#34;gopages&#34;, flag.ContinueOnError)
+<span id="L23" class="ln">    23  </span>	commandLine.StringVar(&amp;args.OutputPath, &#34;out&#34;, &#34;dist&#34;, &#34;Output path for static files&#34;)
+<span id="L24" class="ln">    24  </span>	commandLine.StringVar(&amp;args.BaseURL, &#34;base&#34;, &#34;&#34;, &#34;Base URL to use for static assets&#34;)
+<span id="L25" class="ln">    25  </span>	commandLine.StringVar(&amp;args.SiteTitle, &#34;brand-title&#34;, &#34;&#34;, &#34;Branding title in the top left of documentation&#34;)
+<span id="L26" class="ln">    26  </span>	commandLine.StringVar(&amp;args.SiteDescription, &#34;brand-description&#34;, &#34;&#34;, &#34;Branding description in the top left of documentation&#34;)
+<span id="L27" class="ln">    27  </span>	commandLine.BoolVar(&amp;args.GitHubPages, &#34;gh-pages&#34;, false, &#34;Automatically commit the output path to the gh-pages branch. The current branch must be clean.&#34;)
+<span id="L28" class="ln">    28  </span>	commandLine.StringVar(&amp;args.GitHubPagesUser, &#34;gh-pages-user&#34;, &#34;&#34;, &#34;The Git username to push with&#34;)
+<span id="L29" class="ln">    29  </span>	commandLine.StringVar(&amp;args.GitHubPagesToken, &#34;gh-pages-token&#34;, &#34;&#34;, &#34;The Git token to push with. Usually this is an API key.&#34;)
+<span id="L30" class="ln">    30  </span>	var output bytes.Buffer
+<span id="L31" class="ln">    31  </span>	commandLine.SetOutput(&amp;output)
+<span id="L32" class="ln">    32  </span>	err := commandLine.Parse(osArgs) <span class="comment">// prints usage if fails</span>
+<span id="L33" class="ln">    33  </span>	return args, output.String(), err
+<span id="L34" class="ln">    34  </span>}
+<span id="L35" class="ln">    35  </span>
 </pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br/>
+Build version go1.13.12.<br/>
 </div>
 
 </div><!-- .container -->
