--- a/gopages/src/github.com/johnstarich/go/gopages/internal/generate/godoc.html.go.html
+++ b/gopages/src/github.com/johnstarich/go/gopages/internal/generate/godoc.html.go.html
@@ -12,7 +12,8 @@
 
 
 
-<script>var goVersion = "go1.13.11";</script>
+
+<script>var goVersion = "go1.13.12";</script>
 <script src="/go/gopages/lib/godoc/godocs.js" defer=""></script>
 </head>
 <body>
@@ -77,88 +78,89 @@
 <span id="L22" class="ln">    22  </span>&lt;script src=&#34;{{gopages &#34;&#34; &#34;BaseURL&#34;}}/lib/godoc/jquery.treeview.js&#34; defer&gt;&lt;/script&gt;
 <span id="L23" class="ln">    23  </span>&lt;script src=&#34;{{gopages &#34;&#34; &#34;BaseURL&#34;}}/lib/godoc/jquery.treeview.edit.js&#34; defer&gt;&lt;/script&gt;
 <span id="L24" class="ln">    24  </span>{{end}}
-<span id="L25" class="ln">    25  </span>
-<span id="L26" class="ln">    26  </span>{{if .Playground}}
-<span id="L27" class="ln">    27  </span>&lt;script src=&#34;{{gopages &#34;&#34; &#34;BaseURL&#34;}}/lib/godoc/playground.js&#34; defer&gt;&lt;/script&gt;
-<span id="L28" class="ln">    28  </span>{{end}}
-<span id="L29" class="ln">    29  </span>{{with .Version}}&lt;script&gt;var goVersion = {{printf &#34;%q&#34; .}};&lt;/script&gt;{{end}}
-<span id="L30" class="ln">    30  </span>&lt;script src=&#34;{{gopages &#34;&#34; &#34;BaseURL&#34;}}/lib/godoc/godocs.js&#34; defer&gt;&lt;/script&gt;
-<span id="L31" class="ln">    31  </span>&lt;/head&gt;
-<span id="L32" class="ln">    32  </span>&lt;body&gt;
-<span id="L33" class="ln">    33  </span>
-<span id="L34" class="ln">    34  </span>&lt;div id=&#39;lowframe&#39; style=&#34;position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;&#34;&gt;
-<span id="L35" class="ln">    35  </span>...
-<span id="L36" class="ln">    36  </span>&lt;/div&gt;&lt;!-- #lowframe --&gt;
-<span id="L37" class="ln">    37  </span>
-<span id="L38" class="ln">    38  </span>&lt;div id=&#34;topbar&#34;{{if .Title}} class=&#34;wide&#34;{{end}}&gt;&lt;div class=&#34;container&#34;&gt;
-<span id="L39" class="ln">    39  </span>&lt;div class=&#34;top-heading&#34; id=&#34;heading-wide&#34;&gt;&lt;a href=&#34;{{gopages &#34;&#34; &#34;ModuleURL&#34;}}&#34;&gt;{{gopages &#34;GoPages | Auto-generated docs&#34; &#34;SiteTitleLong&#34; &#34;SiteTitle&#34;}}&lt;/a&gt;&lt;/div&gt;
-<span id="L40" class="ln">    40  </span>&lt;div class=&#34;top-heading&#34; id=&#34;heading-narrow&#34;&gt;&lt;a href=&#34;{{gopages &#34;&#34; &#34;ModuleURL&#34;}}&#34;&gt;{{gopages &#34;GoPages&#34; &#34;SiteTitle&#34;}}&lt;/a&gt;&lt;/div&gt;
-<span id="L41" class="ln">    41  </span>&lt;a href=&#34;#&#34; id=&#34;menu-button&#34;&gt;&lt;span id=&#34;menu-button-arrow&#34;&gt;&amp;#9661;&lt;/span&gt;&lt;/a&gt;
-<span id="L42" class="ln">    42  </span>
-<span id="L43" class="ln">    43  </span>&lt;/div&gt;&lt;/div&gt;
-<span id="L44" class="ln">    44  </span>
-<span id="L45" class="ln">    45  </span>{{if .Playground}}
-<span id="L46" class="ln">    46  </span>&lt;div id=&#34;playground&#34; class=&#34;play&#34;&gt;
-<span id="L47" class="ln">    47  </span>	&lt;div class=&#34;input&#34;&gt;&lt;textarea class=&#34;code&#34; spellcheck=&#34;false&#34;&gt;package main
-<span id="L48" class="ln">    48  </span>
-<span id="L49" class="ln">    49  </span>import &#34;fmt&#34;
-<span id="L50" class="ln">    50  </span>
-<span id="L51" class="ln">    51  </span>func main() {
-<span id="L52" class="ln">    52  </span>	fmt.Println(&#34;Hello, 世界&#34;)
-<span id="L53" class="ln">    53  </span>}&lt;/textarea&gt;&lt;/div&gt;
-<span id="L54" class="ln">    54  </span>	&lt;div class=&#34;output&#34;&gt;&lt;/div&gt;
-<span id="L55" class="ln">    55  </span>	&lt;div class=&#34;buttons&#34;&gt;
-<span id="L56" class="ln">    56  </span>		&lt;a class=&#34;run&#34; title=&#34;Run this code [shift-enter]&#34;&gt;Run&lt;/a&gt;
-<span id="L57" class="ln">    57  </span>		&lt;a class=&#34;fmt&#34; title=&#34;Format this code&#34;&gt;Format&lt;/a&gt;
-<span id="L58" class="ln">    58  </span>		{{if not $.GoogleCN}}
-<span id="L59" class="ln">    59  </span>		&lt;a class=&#34;share&#34; title=&#34;Share this code&#34;&gt;Share&lt;/a&gt;
-<span id="L60" class="ln">    60  </span>		{{end}}
-<span id="L61" class="ln">    61  </span>	&lt;/div&gt;
-<span id="L62" class="ln">    62  </span>&lt;/div&gt;
-<span id="L63" class="ln">    63  </span>{{end}}
-<span id="L64" class="ln">    64  </span>
-<span id="L65" class="ln">    65  </span>&lt;div id=&#34;page&#34;{{if .Title}} class=&#34;wide&#34;{{end}}&gt;
-<span id="L66" class="ln">    66  </span>&lt;div class=&#34;container&#34;&gt;
-<span id="L67" class="ln">    67  </span>
-<span id="L68" class="ln">    68  </span>{{if or .Title .SrcPath}}
-<span id="L69" class="ln">    69  </span>  &lt;h1&gt;
-<span id="L70" class="ln">    70  </span>    {{html .Title}}
-<span id="L71" class="ln">    71  </span>    {{html .SrcPath | srcBreadcrumb}}
-<span id="L72" class="ln">    72  </span>  &lt;/h1&gt;
-<span id="L73" class="ln">    73  </span>{{end}}
-<span id="L74" class="ln">    74  </span>
-<span id="L75" class="ln">    75  </span>{{with .Subtitle}}
-<span id="L76" class="ln">    76  </span>  &lt;h2&gt;{{html .}}&lt;/h2&gt;
-<span id="L77" class="ln">    77  </span>{{end}}
-<span id="L78" class="ln">    78  </span>
-<span id="L79" class="ln">    79  </span>{{with .SrcPath}}
-<span id="L80" class="ln">    80  </span>  &lt;h2&gt;
-<span id="L81" class="ln">    81  </span>    Documentation: {{html . | srcToPkgLink}}
-<span id="L82" class="ln">    82  </span>  &lt;/h2&gt;
-<span id="L83" class="ln">    83  </span>{{end}}
-<span id="L84" class="ln">    84  </span>
-<span id="L85" class="ln">    85  </span>{{/* The Table of Contents is automatically inserted in this &lt;div&gt;.
-<span id="L86" class="ln">    86  </span>     Do not delete this &lt;div&gt;. */}}
-<span id="L87" class="ln">    87  </span>&lt;div id=&#34;nav&#34;&gt;&lt;/div&gt;
-<span id="L88" class="ln">    88  </span>
-<span id="L89" class="ln">    89  </span>{{/* Body is HTML-escaped elsewhere */}}
-<span id="L90" class="ln">    90  </span>{{printf &#34;%s&#34; .Body}}
-<span id="L91" class="ln">    91  </span>
-<span id="L92" class="ln">    92  </span>&lt;div id=&#34;footer&#34;&gt;
-<span id="L93" class="ln">    93  </span>Build version {{html .Version}}.&lt;br&gt;
-<span id="L94" class="ln">    94  </span>&lt;/div&gt;
-<span id="L95" class="ln">    95  </span>
-<span id="L96" class="ln">    96  </span>&lt;/div&gt;&lt;!-- .container --&gt;
-<span id="L97" class="ln">    97  </span>&lt;/div&gt;&lt;!-- #page --&gt;
-<span id="L98" class="ln">    98  </span>&lt;/body&gt;
-<span id="L99" class="ln">    99  </span>&lt;/html&gt;
-<span id="L100" class="ln">   100  </span>`
-<span id="L101" class="ln">   101  </span>)
-<span id="L102" class="ln">   102  </span>
+<span id="L25" class="ln">    25  </span>{{gopagesWatchScript}}
+<span id="L26" class="ln">    26  </span>
+<span id="L27" class="ln">    27  </span>{{if .Playground}}
+<span id="L28" class="ln">    28  </span>&lt;script src=&#34;{{gopages &#34;&#34; &#34;BaseURL&#34;}}/lib/godoc/playground.js&#34; defer&gt;&lt;/script&gt;
+<span id="L29" class="ln">    29  </span>{{end}}
+<span id="L30" class="ln">    30  </span>{{with .Version}}&lt;script&gt;var goVersion = {{printf &#34;%q&#34; .}};&lt;/script&gt;{{end}}
+<span id="L31" class="ln">    31  </span>&lt;script src=&#34;{{gopages &#34;&#34; &#34;BaseURL&#34;}}/lib/godoc/godocs.js&#34; defer&gt;&lt;/script&gt;
+<span id="L32" class="ln">    32  </span>&lt;/head&gt;
+<span id="L33" class="ln">    33  </span>&lt;body&gt;
+<span id="L34" class="ln">    34  </span>
+<span id="L35" class="ln">    35  </span>&lt;div id=&#39;lowframe&#39; style=&#34;position: fixed; bottom: 0; left: 0; height: 0; width: 100%; border-top: thin solid grey; background-color: white; overflow: auto;&#34;&gt;
+<span id="L36" class="ln">    36  </span>...
+<span id="L37" class="ln">    37  </span>&lt;/div&gt;&lt;!-- #lowframe --&gt;
+<span id="L38" class="ln">    38  </span>
+<span id="L39" class="ln">    39  </span>&lt;div id=&#34;topbar&#34;{{if .Title}} class=&#34;wide&#34;{{end}}&gt;&lt;div class=&#34;container&#34;&gt;
+<span id="L40" class="ln">    40  </span>&lt;div class=&#34;top-heading&#34; id=&#34;heading-wide&#34;&gt;&lt;a href=&#34;{{gopages &#34;&#34; &#34;ModuleURL&#34;}}&#34;&gt;{{gopages &#34;GoPages | Auto-generated docs&#34; &#34;SiteTitleLong&#34; &#34;SiteTitle&#34;}}&lt;/a&gt;&lt;/div&gt;
+<span id="L41" class="ln">    41  </span>&lt;div class=&#34;top-heading&#34; id=&#34;heading-narrow&#34;&gt;&lt;a href=&#34;{{gopages &#34;&#34; &#34;ModuleURL&#34;}}&#34;&gt;{{gopages &#34;GoPages&#34; &#34;SiteTitle&#34;}}&lt;/a&gt;&lt;/div&gt;
+<span id="L42" class="ln">    42  </span>&lt;a href=&#34;#&#34; id=&#34;menu-button&#34;&gt;&lt;span id=&#34;menu-button-arrow&#34;&gt;&amp;#9661;&lt;/span&gt;&lt;/a&gt;
+<span id="L43" class="ln">    43  </span>
+<span id="L44" class="ln">    44  </span>&lt;/div&gt;&lt;/div&gt;
+<span id="L45" class="ln">    45  </span>
+<span id="L46" class="ln">    46  </span>{{if .Playground}}
+<span id="L47" class="ln">    47  </span>&lt;div id=&#34;playground&#34; class=&#34;play&#34;&gt;
+<span id="L48" class="ln">    48  </span>	&lt;div class=&#34;input&#34;&gt;&lt;textarea class=&#34;code&#34; spellcheck=&#34;false&#34;&gt;package main
+<span id="L49" class="ln">    49  </span>
+<span id="L50" class="ln">    50  </span>import &#34;fmt&#34;
+<span id="L51" class="ln">    51  </span>
+<span id="L52" class="ln">    52  </span>func main() {
+<span id="L53" class="ln">    53  </span>	fmt.Println(&#34;Hello, 世界&#34;)
+<span id="L54" class="ln">    54  </span>}&lt;/textarea&gt;&lt;/div&gt;
+<span id="L55" class="ln">    55  </span>	&lt;div class=&#34;output&#34;&gt;&lt;/div&gt;
+<span id="L56" class="ln">    56  </span>	&lt;div class=&#34;buttons&#34;&gt;
+<span id="L57" class="ln">    57  </span>		&lt;a class=&#34;run&#34; title=&#34;Run this code [shift-enter]&#34;&gt;Run&lt;/a&gt;
+<span id="L58" class="ln">    58  </span>		&lt;a class=&#34;fmt&#34; title=&#34;Format this code&#34;&gt;Format&lt;/a&gt;
+<span id="L59" class="ln">    59  </span>		{{if not $.GoogleCN}}
+<span id="L60" class="ln">    60  </span>		&lt;a class=&#34;share&#34; title=&#34;Share this code&#34;&gt;Share&lt;/a&gt;
+<span id="L61" class="ln">    61  </span>		{{end}}
+<span id="L62" class="ln">    62  </span>	&lt;/div&gt;
+<span id="L63" class="ln">    63  </span>&lt;/div&gt;
+<span id="L64" class="ln">    64  </span>{{end}}
+<span id="L65" class="ln">    65  </span>
+<span id="L66" class="ln">    66  </span>&lt;div id=&#34;page&#34;{{if .Title}} class=&#34;wide&#34;{{end}}&gt;
+<span id="L67" class="ln">    67  </span>&lt;div class=&#34;container&#34;&gt;
+<span id="L68" class="ln">    68  </span>
+<span id="L69" class="ln">    69  </span>{{if or .Title .SrcPath}}
+<span id="L70" class="ln">    70  </span>  &lt;h1&gt;
+<span id="L71" class="ln">    71  </span>    {{html .Title}}
+<span id="L72" class="ln">    72  </span>    {{html .SrcPath | srcBreadcrumb}}
+<span id="L73" class="ln">    73  </span>  &lt;/h1&gt;
+<span id="L74" class="ln">    74  </span>{{end}}
+<span id="L75" class="ln">    75  </span>
+<span id="L76" class="ln">    76  </span>{{with .Subtitle}}
+<span id="L77" class="ln">    77  </span>  &lt;h2&gt;{{html .}}&lt;/h2&gt;
+<span id="L78" class="ln">    78  </span>{{end}}
+<span id="L79" class="ln">    79  </span>
+<span id="L80" class="ln">    80  </span>{{with .SrcPath}}
+<span id="L81" class="ln">    81  </span>  &lt;h2&gt;
+<span id="L82" class="ln">    82  </span>    Documentation: {{html . | srcToPkgLink}}
+<span id="L83" class="ln">    83  </span>  &lt;/h2&gt;
+<span id="L84" class="ln">    84  </span>{{end}}
+<span id="L85" class="ln">    85  </span>
+<span id="L86" class="ln">    86  </span>{{/* The Table of Contents is automatically inserted in this &lt;div&gt;.
+<span id="L87" class="ln">    87  </span>     Do not delete this &lt;div&gt;. */}}
+<span id="L88" class="ln">    88  </span>&lt;div id=&#34;nav&#34;&gt;&lt;/div&gt;
+<span id="L89" class="ln">    89  </span>
+<span id="L90" class="ln">    90  </span>{{/* Body is HTML-escaped elsewhere */}}
+<span id="L91" class="ln">    91  </span>{{printf &#34;%s&#34; .Body}}
+<span id="L92" class="ln">    92  </span>
+<span id="L93" class="ln">    93  </span>&lt;div id=&#34;footer&#34;&gt;
+<span id="L94" class="ln">    94  </span>Build version {{html .Version}}.&lt;br&gt;
+<span id="L95" class="ln">    95  </span>&lt;/div&gt;
+<span id="L96" class="ln">    96  </span>
+<span id="L97" class="ln">    97  </span>&lt;/div&gt;&lt;!-- .container --&gt;
+<span id="L98" class="ln">    98  </span>&lt;/div&gt;&lt;!-- #page --&gt;
+<span id="L99" class="ln">    99  </span>&lt;/body&gt;
+<span id="L100" class="ln">   100  </span>&lt;/html&gt;
+<span id="L101" class="ln">   101  </span>`
+<span id="L102" class="ln">   102  </span>)
+<span id="L103" class="ln">   103  </span>
 </pre><p></p>
 
 <div id="footer">
-Build version go1.13.11.<br/>
+Build version go1.13.12.<br/>
 </div>
 
 </div><!-- .container -->
